syntax = "proto3";

package com.example.internalapi.request.book_presence.get_all_by_library_id_and_book_id.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/book_presence.proto";

message GetAllBooksByLibraryIdAndBookIdRequest {
  string library_id = 1;
  string book_id = 2;
}

message GetAllBooksByLibraryIdAndBookIdResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.BookPresenceList book_presences = 1;
  }
}
