syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/reservation/notify_on_availability.proto";

service NotifyOnAvailabilityService {
  rpc notifyOnAvailability(com.example.internalapi.request.reservation.notify_on_availability.proto.NotifyOnAvailabilityRequest)
      returns (stream com.example.internalapi.request.reservation.notify_on_availability.proto.NotifyOnAvailabilityResponse);
}
